--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine on
-
+RewriteRule ^$ - [R=404,L]
 RewriteRule ^([a-zA-Z]+)$ mediatekdocuments.php?table=$1
 RewriteRule ^([a-zA-Z]+)/([a-zA-Z0-9]+)$ mediatekdocuments.php?table=$1&id=$2
 RewriteRule ^([a-zA-Z]+)/({.*})$ mediatekdocuments.php?table=$1&contenu=$2
